# langgraph_practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/1-langgraph-basic/: 01_simple_langgraph.ipynb  02_chatbot.ipynb
src/2-langgraph-components/: 01-state-schema-with-dataclasses.ipynb  02-pydantic.ipynb  03-chain-using-langgraph.ipynb  04-chatbot-with-multiple-tools.ipynb  05-ReAct-Architecture.ipynb  06-stream-in-langgraph.ipynb
src/3-debugging/: 01-openai-agent.py
src/4-workflow/: 01-prompt-chaining.ipynb  02-parallelization-langgraph.ipynb  03-routing.ipynb  04-orchestrator.ipynb  05-orchestrate-blog-post.ipynb  06-evaluator-optimizer.ipynb
src/5-human-in-the-loop/: 01-human-in-the-loop.ipynb
src/6-rag/: 01-agentic-rag.ipynb  02-corrective-rag.ipynb  03-adaptive-rag.ipynb
